--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ issueTrackerURL="https://www.curseforge.com/minecraft/mc-mods" #optional
 
 modId="${mod_id}" #mandatory
 version="${mod_version}" #mandatory
-displayName="Ellada" #mandatory
+displayName="${mod_name}" #mandatory
 #logoFile="examplemod.png"
 credits="Thanks go to NUDLAUFLAUCH and AGENT BROKKOLI 007 for all of the textures"
 authors="Stehschnitzel"
